[package]
name = "gemma_m0"
version = "0.1.1"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
description = "Board Support crate for the Adafruit Gemma M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21e18a/gemma_m0/"

[dependencies]
cortex-m = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"

[dependencies.cortex-m-rt]
version = "~0.6"
optional = true

[dependencies.atsamd21-hal]
path = "../../hal"
version = "~0.2"
default-features = false

[dev-dependencies]
panic-abort = "~0.3"

[features]
# ask the HAL to enable atsamd21e18a support
default = ["rt", "atsamd21-hal/samd21e18a"]
rt = ["cortex-m-rt", "atsamd21-hal/samd21e18a-rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
