[package]
name = "gemma_m0"
version = "0.11.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
description = "Board Support crate for the Adafruit Gemma M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.14"
default-features = false

[dev-dependencies]
panic-halt = "0.2"

[features]
# ask the HAL to enable atsamd21e support
default = ["rt", "atsamd-hal/samd21e"]
rt = ["cortex-m-rt", "atsamd-hal/samd21e-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21E18A"
