[package]
name = "grand_central_m4"
version = "0.5.0"
authors = [
    "Dustin Little <dlittle@toyatech.net>"
]
description = "Board Support crate for the Adafruit Grand Central M4 Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies]
ws2812-timer-delay = "0.3"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.15"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dev-dependencies]
cortex-m = "0.7"
usbd-serial = "0.1"
panic-halt = "0.2"
panic-semihosting = "0.5"
smart-leds = "0.3"

[features]
default = ["rt", "atsamd-hal/samd51p", "atsamd-hal/samd51", "atsamd-hal/unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51p-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD51P20A"

[[example]]
name = "blinky_basic"

[[example]]
name = "neopixel_rainbow"

[[example]]
name = "usb_serial"
required-features = ["usb"]

