[package]
name = "grand_central_m4"
version = "0.8.2"
authors = ["Dustin Little <dlittle@toyatech.net>"]
description = "Board Support crate for the Adafruit Grand Central M4 Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.21.3"
default-features = false

[dependencies.usb-device]
version = "0.3.2"
optional = true

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]

[dev-dependencies]
cortex-m = "0.7"
usbd-serial = "0.2"
panic-halt = "1.0.0"
panic-probe = "1.0.0"
panic-semihosting = "0.6"
smart-leds = "0.3"
ws2812-timer-delay = "0.3"
embassy-executor = { version = "0.7.0", features = [
	"arch-cortex-m",
	"executor-thread",
	"task-arena-size-8192",
] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"

[features]
default = ["rt", "atsamd-hal/samd51p"]
dma = ["atsamd-hal/dma"]
max-channels = ["dma", "atsamd-hal/max-channels"]
rt = ["cortex-m-rt", "atsamd-hal/samd51p-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
use_semihosting = []
async = ["atsamd-hal/async"]


# for cargo flash
[package.metadata]
chip = "ATSAMD51P20A"

[[example]]
name = "blinky_basic"

[[example]]
name = "i2c"
required-features = ["dma"]

[[example]]
name = "eic"

[[example]]
name = "neopixel_rainbow"

[[example]]
name = "usb_serial"
required-features = ["usb"]

[[example]]
name = "async_eic"
required-features = ["async"]
