[package]
name = "itsybitsy_m0"
version = "0.8.0"
authors = ["Ben Bergman <ben@benbergman.ca>"]
description = "Board Support crate for the Adafruit ItsyBitsy M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/itsybitsy_m0/"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
bitbang-hal = "~0.3"
apa102-spi = "~0.3"
smart-leds = "~0.3"
nb = "~0.1"

[dependencies.cortex-m-rt]
version = "~0.6.12"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "~0.9"
default-features = false

[dependencies.usb-device]
version = "~0.2"
optional = true

[dependencies.usbd-serial]
version = "~0.1"
optional = true

[dependencies.usbd-hid]
version = "~0.4"
optional = true

[dev-dependencies]
panic-halt = "~0.2"
ssd1306 = "~0.3.1"
embedded-graphics = "0.6.0"

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "atsamd-hal/samd21g18a"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g18a-rt"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial", "usbd-hid"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

[[example]]
name = "blinky_basic"

[[example]]
name = "dotstar"
required-features = ["unproven"]

[[example]]
name = "i2c_ssd1306"

[[example]]
name = "spi_ssd1306"

[[example]]
name = "usb_echo"
required-features = ["usb"]

[[example]]
name = "twitching_usb_mouse"
required-features = ["usb"]
