[package]
name = "itsybitsy_m0"
version = "0.14.0"
authors = ["Ben Bergman <ben@benbergman.ca>"]
description = "Board Support crate for the Adafruit ItsyBitsy M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"

[dependencies]
bitbang-hal = "0.3"
apa102-spi = "0.3"
embedded-hal-02 = {package = "embedded-hal", version = "0.2", features = ["unproven"]}
smart-leds = "0.3"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.17"
default-features = false

[dependencies.usb-device]
version = "0.3.1"
optional = true

[dependencies.embedded-sdmmc]
version = "0.3"
optional = true

[dev-dependencies]
cortex-m-rtic = "1.0"
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
usbd-serial = "0.2.2"
usbd-hid = "0.8.2"
cortex-m-semihosting = "0.3"
ssd1306 = "0.7"
embedded-graphics = "0.7.1"
drogue-nom-utils = "0.1"
nom = { version = "5", default-features = false }
heapless = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.5"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
use_rtt = ["atsamd-hal/use_rtt"]
usb = ["atsamd-hal/usb", "usb-device"]
dma = ["atsamd-hal/dma"]
max-channels = ["dma", "atsamd-hal/max-channels"]
sdmmc = ["embedded-sdmmc", "atsamd-hal/sdmmc"]
rtic = ["atsamd-hal/rtic"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[[example]]
name = "blinky_basic"

[[example]]
name = "timers"

[[example]]
name = "pwm"

[[example]]
name = "adc"

[[example]]
name = "ssd1306_graphicsmode_128x64_i2c"

[[example]]
name = "ssd1306_terminalmode_128x64_i2c"

[[example]]
name = "ssd1306_graphicsmode_128x64_spi"

[[example]]
name = "ssd1306_terminalmode_128x64_spi"

[[example]]
name = "usb_echo"
required-features = ["usb"]

[[example]]
name = "twitching_usb_mouse"
required-features = ["usb"]

[[example]]
name = "sleeping_timer"

[[example]]
name = "sleeping_timer_rtc"

[[example]]
name = "dmac"
required-features = ["dma"]

[[example]]
name = "clock"
required-features = ["usb"]

[[example]]
name = "dotstar_flashing"

[[example]]
name = "dotstar_rainbow"

[[example]]
name = "blinky_rtic"
required-features = ["rtic"]

[[example]]
name = "uart"
required-features = ["dma"]
