[package]
name = "itsybitsy_m4"
version = "0.6.0"
authors = [
    "Nic Hartley <nxh9052@rit.edu>",
    "Tom <twitchyliquid64@ciphersink.net>",
]
description = "Board Support crate for the Adafruit ItsyBitsy M4 Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"
bitbang-hal = "0.3"
apa102-spi = "0.3"
smart-leds = "0.3"
nb = "0.1"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
version = "0.13"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
cortex-m-rtic = "0.5.1"
panic_rtt = "0.2"

[features]
# ask the HAL to enable atsamd51g support
default = ["rt", "atsamd-hal/samd51g", "atsamd-hal/samd51", "atsamd-hal/unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51g-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
use_rtt = ["atsamd-hal/use_rtt"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD51G19A"

[package.metadata.atsamd.bsp]
tier = 2
build_command = "cargo build --examples --features=unproven,usb,use_rtt"

[[example]]
name = "blinky_basic"

[[example]]
name = "dotstar"

[[example]]
name = "usb_serial"
required-features = ["usb", "use_rtt"]
