[package]
name = "itsybitsy_m4"
version = "0.8.0"
authors = [
    "Nic Hartley <nxh9052@rit.edu>",
    "Tom <twitchyliquid64@ciphersink.net>",
]
description = "Board Support crate for the Adafruit ItsyBitsy M4 Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies]
bitbang-hal = "0.3"
apa102-spi = "0.3"
smart-leds = "0.3"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.15"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dev-dependencies]
cortex-m = "0.7"
usbd-serial = "0.1"
panic-halt = "0.2"
panic-semihosting = "0.6"

[features]
# ask the HAL to enable atsamd51g support
default = ["rt", "atsamd-hal/samd51g", "atsamd-hal/samd51", "atsamd-hal/unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51g-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device"]
use_rtt = ["atsamd-hal/use_rtt"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAMD51G19A"

[[example]]
name = "blinky_basic"

[[example]]
name = "dotstar"

[[example]]
name = "spi"

[[example]]
name = "usb_serial"
required-features = ["usb", "use_rtt"]
