[package]
name = "itsybitsy_m4"
version = "0.9.0"
authors = [
    "Nic Hartley <nxh9052@rit.edu>",
    "Tom <twitchyliquid64@ciphersink.net>",
]
description = "Board Support crate for the Adafruit ItsyBitsy M4 Express"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"

[dependencies]
bitbang-hal = "0.3"
apa102-spi = "0.3"
embedded-hal-02 = {package = "embedded-hal", version = "0.2", features = ["unproven"]}
smart-leds = "0.3"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.17"
default-features = false

[dependencies.usb-device]
version = "0.3.1"
optional = true

[dev-dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
usbd-serial = "0.2.2"
panic-halt = "0.2"
panic-semihosting = "0.6"

[features]
# ask the HAL to enable atsamd51g support
default = ["rt", "atsamd-hal/samd51g"]
rt = ["cortex-m-rt", "atsamd-hal/samd51g-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
use_rtt = ["atsamd-hal/use_rtt"]
use_semihosting = []

# for cargo flash
[package.metadata]
chip = "ATSAMD51G19A"

[[example]]
name = "blinky_basic"

[[example]]
name = "dotstar"

[[example]]
name = "spi"

[[example]]
name = "usb_serial"
required-features = ["usb", "use_rtt"]
