[package]
name = "metro_m0"
version = "0.12.1"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
description = "Board Support crate for the Adafruit Metro M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2021"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.15.1"
default-features = false

[dependencies.usb-device]
version = "0.2"
optional = true

[dev-dependencies]
cortex-m = "0.7"
usbd-serial = "0.1"
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-rtic = "1.0"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
rtic = ["atsamd-hal/rtic"]
unproven = ["atsamd-hal/unproven"]
use_rtt = ["atsamd-hal/use_rtt"]
usb = ["atsamd-hal/usb", "usb-device"]
use_semihosting = []

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"

[[example]]
name = "usb_echo"
required-features = ["usb", "unproven"]

[[example]]
name = "blinky_rtic"
required-features = ["rtic", "unproven"]

[[example]]
name = "blinky_basic"

[[example]]
name = "i2c"
required-features = ["atsamd-hal/dma"]
