[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support crate for the Adafruit Metro M0"
edition = "2021"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
name = "metro_m0"
readme = "README.md"
repository = "https://github.com/atsamd-rs/atsamd"
version = "0.18.2"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[dependencies.cortex-m-rt]
optional = true
version = "0.7"

[dependencies.cortex-m]
features = ["critical-section-single-core"]
version = "0.7"

[dependencies.atsamd-hal]
default-features = false
path = "../../hal"
version = "0.21.1"

[dependencies.rtic]
features = ["thumbv6-backend"]
optional = true
version = "2.1.1"

[dependencies.usb-device]
optional = true
version = "0.3.1"

[dev-dependencies]
cortex-m = "0.7"
panic-halt = "0.2"
panic-semihosting = "0.5"
usbd-serial = "0.2"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
dma = ["atsamd-hal/dma"]
max-channels = ["dma", "atsamd-hal/max-channels"]
# Enable async support from atsamd-hal
async = ["atsamd-hal/async"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
rtic = ["dep:rtic", "atsamd-hal/rtic"]
usb = ["atsamd-hal/usb", "usb-device"]
use_rtt = ["atsamd-hal/use_rtt"]
use_semihosting = []

[[example]]
name = "blinky_basic"

[[example]]
name = "blinky_rtic"
required-features = ["rtic"]

[[example]]
name = "i2c"
required-features = ["dma"]

[[example]]
name = "spi"
required-features = ["dma"]

[[example]]
name = "usb_echo"
required-features = ["usb"]
